fix: alignment in the card

--- a/styles/components/TicketList/TicketCard/TicketCard.scss
+++ b/styles/components/TicketList/TicketCard/TicketCard.scss
@@ -110,7 +110,8 @@
         }
       }
       .see-more-button {
-        cursor: pointer;
+        border-radius: 3px;
+        text-decoration: none;
         display: flex;
         gap: 1em;
         align-items: center;
